<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.detail.DetailActivity">

    <include
        android:id="@+id/user_include"
        layout="@layout/appbar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_include">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/group"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/upload_foto"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_profile" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_fullname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_upload">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_data_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullname"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/tv_fullname"
                app:layout_constraintStart_toStartOf="@+id/tv_fullname"
                app:layout_constraintTop_toBottomOf="@+id/tv_fullname">


                <RadioButton
                    android:id="@+id/radio_laki"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:gravity="center"
                    android:text="Laki-Laki"
                    android:textColor="@color/radio_flat_text_selector" />

                <RadioButton
                    android:id="@+id/radio_perempuan"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="Perempuan"
                    android:textColor="@color/radio_flat_text_selector" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tv_fullname"
                app:layout_constraintStart_toStartOf="@+id/tv_fullname"
                app:layout_constraintTop_toBottomOf="@+id/rg_gender">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_address_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_no_ktp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:layout_marginTop="7dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_address"
                app:layout_constraintStart_toStartOf="@+id/tv_address"
                app:layout_constraintTop_toBottomOf="@+id/tv_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_no_ktp_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_ktp"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_no_telp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:layout_marginTop="7dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_no_ktp"
                app:layout_constraintStart_toStartOf="@+id/tv_no_ktp"
                app:layout_constraintTop_toBottomOf="@+id/tv_no_ktp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_no_telp_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_telepon"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_skills"
                style="@style/Theme.TemanKerja.TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_no_telp"
                app:layout_constraintStart_toStartOf="@+id/tv_no_telp"
                app:layout_constraintTop_toBottomOf="@+id/tv_no_telp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_skills_data"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:maxLength="50"
                    android:overScrollMode="always"
                    android:padding="3dp"
                    android:hint="@string/keterampilan"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded"
                android:text="@string/save"
                android:layout_marginTop="10dp"
                app:backgroundTint="@color/blue"
                app:layout_constraintEnd_toEndOf="@+id/tv_skills"
                app:layout_constraintStart_toStartOf="@+id/tv_skills"
                app:layout_constraintTop_toBottomOf="@+id/tv_skills" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>