<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.createjobs.CreateJobsActivity">

    <include
        android:id="@+id/user_include"
        layout="@layout/appbar_layout_recruiter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_include"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-74dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="150dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/work"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/upload_foto"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_profile" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_company_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_upload">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_company_name_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_perusahaan"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_company_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tv_company_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_company_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_company_category_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/jenis_perusahaan"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_posisi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tv_company_category"
                app:layout_constraintStart_toStartOf="@+id/tv_company_category"
                app:layout_constraintTop_toBottomOf="@+id/tv_company_category">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_posisi_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/posisi_pekerjaan"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_lokasi"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_spinner"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="@+id/tv_posisi"
                app:layout_constraintStart_toStartOf="@+id/tv_posisi"
                app:layout_constraintTop_toBottomOf="@+id/tv_posisi" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_gaji"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/spinner_lokasi"
                app:layout_constraintStart_toStartOf="@+id/spinner_lokasi"
                app:layout_constraintTop_toBottomOf="@+id/spinner_lokasi">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_gaji_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gaji"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_jadwal_kerja"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tv_gaji"
                app:layout_constraintStart_toStartOf="@+id/tv_gaji"
                app:layout_constraintTop_toBottomOf="@+id/tv_gaji">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_jadwal_kerja_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/jadwal_kerja"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_deskripsi"
                style="@style/Theme.TemanKerja.TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tv_jadwal_kerja"
                app:layout_constraintStart_toStartOf="@+id/tv_jadwal_kerja"
                app:layout_constraintTop_toBottomOf="@+id/tv_jadwal_kerja">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_deskripsi_data"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="top"
                    android:hint="@string/keterampilan"
                    android:inputType="textMultiLine"
                    android:maxLength="50"
                    android:overScrollMode="always"
                    android:padding="3dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_rounded"
                android:text="Post"
                app:backgroundTint="@color/purple"
                app:layout_constraintEnd_toEndOf="@+id/tv_deskripsi"
                app:layout_constraintStart_toStartOf="@+id/tv_deskripsi"
                app:layout_constraintTop_toBottomOf="@+id/tv_deskripsi" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>